tests/fixtures/invalid/multi/module_import/src/constants/main.gcl
// Module import: import entire file as a module namespace
import constants.lib;

node g: Acceleration = @constants.g0;
